--- a/dinky-flink/dinky-flink-1.19/pom.xml
+++ b/dinky-flink/dinky-flink-1.19/pom.xml
@@ -112,6 +112,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-oceanbase-cdc</artifactId>
+            <version>${flinkcdc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
             <artifactId>flink-cdc-cli</artifactId>
             <version>${flinkcdc.version}</version>
         </dependency>
